# photo-scanner-splitter

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  Makefile  QUICKSTART.md  README.md  SETUP_SUMMARY.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/: ACTIONS_CONFIGURATION.md  CI_SETUP_SUMMARY.md  README.md  branch-protection.md  verify-ci-setup.sh
.github/agents/: instructions.md
.github/workflows/: ci.yml
examples/: README.md  create_sample.py  face_detection_demo.py  test_rotation_detection.py
photo_splitter/: __init__.py  cli.py  deduplicator.py  detector.py  face_detector.py  image_processing.py  location_identifier.py  preview.py  rotation_detector.py  workflow.py
tests/: test_cli.py  test_deduplicator.py  test_detector.py  test_location_identifier.py
